syntax = "proto3";
package fireblaze.billing.v1;
//option go_package = "github.com/lfaoro/spark;billing";
option java_package = "io.fireblaze.billing";
option java_outer_classname = "FireblazeBilling";
option java_multiple_files = true;
option csharp_namespace = "Fireblaze.Billing.V1";
option php_namespace = "Fireblaze\\Billing\\V1";

import "google/protobuf/empty.proto";

service Billing {
  // Inc increments a service usage.
  rpc Inc (IncRequest) returns (google.protobuf.Empty);
}

message IncRequest {
  Service service = 1;
  int32 value = 2;
  string user_id = 3; // obtain user_id via context?
}

enum Service {
  SERVICE_UNDEFINED = 0;
  TOKENIZATION = 1;
  METADATA = 2;
  RISK = 3;
  MPI = 4;
}

message Profile {
  string first_name = 1;
  string last_name = 2;
  string entity_name = 3;
  Address address = 4;

  message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string postcode = 5;
  }
}

